k8s-mock/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datalake-webui-mock
  labels:
    app: datalake-webui-mock
spec:
  type: ClusterIP
  selector:
    app: datalake-webui-mock
  ports:
    - name: http
      port: 80
      targetPort: 8050
