k8s-mock/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datalake-webui-mock
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - host: datalake-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datalake-webui-mock
                port:
                  number: 80
